--- a/Vjezba4/Zadatak4/Zadatak4/Zadatak4.vcxproj.filters
+++ b/Vjezba4/Zadatak4/Zadatak4/Zadatak4.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="polynomes.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
